--- a/main.css
+++ b/main.css
@@ -103,7 +103,39 @@ body {
 .filter .slider input {
   width: 100%;
   height: 5px;
-  accent-color: #8e005f;
+  -webkit-appearance: none; 
+  appearance: none; 
+  background: linear-gradient(to right, #ff0000, #e77606fa,#eb8d49, #f053a9, #ff00dd, #c300ff); 
+  border-radius: 5px;
+}
+
+.filter .slider input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid #ff0081; 
+}
+
+.filter .slider input::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid #ff0081; 
+}
+
+.filter .slider input::-ms-thumb {
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid #ff0081; 
 }
 
 .rotate .options button, .additional-options .options button {
@@ -233,29 +265,6 @@ body {
 }
 .logo-text{
   margin-top: 10px;
-}
-
-@media (min-width: 768px) {
-  .container .wrapper {
-    flex-direction: row;
-    padding-right: 160px;
-    gap: 150px;
-  }
-
-  .preview-img {
-    margin: 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .controls {
-    flex-direction: column;
-  }
-
-  .editor-panel, .preview-img {
-    width: 100%;
-    max-width: none;
-  }
 }
 
 .print-copies-container {
@@ -409,4 +418,61 @@ body {
 
 #apply-background-btn:hover {
   background-color: #b4defd;
+}
+
+@media (min-width: 768px) {
+  .wrapper {
+      flex-direction: row;
+      gap: 100px;
+      padding-right: 100px;
+  }
+
+  .editor-panel {
+      width: 280px;
+      height: 490px;
+  }
+
+  .controls {
+      margin-top: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .wrapper {
+      flex-direction: column-reverse;
+      gap:90px;
+  }
+.container{
+  width:95vh;
+  height: 92vh;
+}
+  .editor-panel {
+    width: 32vh;
+    height: 20vh;
+    flex-direction: column;
+  }
+
+  .preview-img {
+      width:32vh;
+      height: 20vh;
+  }
+
+  .controls {
+      flex-direction: column;
+      align-items: stretch;
+  }
+
+  .controls .row {
+      flex-direction: column;
+  }
+
+  .controls .choose-img, .controls .download-img {
+      width: 100%;
+      margin-top: 1px;
+  }
+
+.logo{
+  width: fit-content;
+  padding-bottom: 55px;
+}
 }
